force-app/main/default/objects/Mosaic_Account_360__dlm/fields/Email_CTR__c.field-meta.xml
<CustomField>
    <fullName>Email_CTR__c</fullName>
    <label>Email_CTR</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Email_CTR</labelOverride>
        <masterLabel>Email_CTR</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>